--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Prithi. This is my first webapp
+            Hi! I am Prithi. This is my first webapp 
+            Welcome
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
