--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,25 @@
 <html>
+    <head>
+        <title>
+            Article One Prithi Samuel
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            April 24 2018
+        </div>
+        <p>
+            Tis is first content
+        </p>
+        <p>
+            Tis is second content
+        </p>
+    </body>
 </html>
