--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article One Prithi Samuel
         </title>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
     </head>
     <body>
         <div>
