[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,3 +1,51 @@
 <html>
-    
+
+    <head>
+
+        <title>
+
+            Article Two Prithi Samuel
+
+        </title>
+
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+
+    </head>
+
+    <body>
+
+        <div>
+
+            <a href="/">Home</a>
+
+        </div>
+
+        <hr/>
+
+        <h3>
+
+            Article Two
+
+        </h3>
+
+        <div>
+
+            April 24 2018
+
+        </div>
+
+        <p>
+
+            This is First content. Article Two page
+
+        </p>
+
+        <p>
+
+            This is First content. Article Two page
+
+        </p>
+
+    </body>
+
 </html>
