--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,1 +1,51 @@
+<html>
 
+    <head>
+
+        <title>
+
+            Article Three Prithi Samuel
+
+        </title>
+
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+
+    </head>
+
+    <body>
+
+        <div>
+
+            <a href="/">Home</a>
+
+        </div>
+
+        <hr/>
+
+        <h3>
+
+            Article Three
+
+        </h3>
+
+        <div>
+
+            April 5 2018
+
+        </div>
+
+        <p>
+
+            Tis is first content
+
+        </p>
+
+        <p>
+
+            Tis is second content
+
+        </p>
+
+    </body>
+
+</html>
