[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -9,11 +9,11 @@
         </title>
 
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
-
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
 
     <body>
-
+<div class="container">
         <div>
 
             <a href="/">Home</a>
@@ -45,7 +45,7 @@
             This is First content. Article Two page
 
         </p>
-
+</div>
     </body>
 
 </html>
